--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.48",
     "@vuepress/plugin-google-analytics": "^1.0.0-alpha.48",
     "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.48",
+    "@vuepress/plugin-nprogress": "^1.0.0-beta.2",
     "vuepress": "^1.0.0-alpha.48"
   },
   "scripts": {
